syntax = "proto3";

package ast;

enum CellField {
  CAPACITY = 0;
  DATA = 1;
  LOCK = 2;
  TYPE = 3;
}

enum ScriptField {
  CODE_HASH = 0;
  HASH_TYPE = 1;
  ARGS = 2;
}

enum Op {
  HASH = 0;
  NOT = 1;

  GET = 2;
  SLICE_BYTES = 3;
  PLUS = 4;
  MINUS = 5;
  EQUAL = 6;
  AND = 7;
  OR = 8;
  LESS = 9;
  LESS_OR_EQUAL = 10;

  LEN = 11;

  INDEX = 12;
}

message Primitive {
  enum Type {
    UINT64 = 0;
    BOOL = 1;
    BYTES = 2;
    LIVE_CELL = 3;
    CELL_FIELD = 4;
    SCRIPT_FIELD = 5;
    OP = 6;

    // In animagus, we distinguish args and params in the following way:
    // * If a Value struct contains an arg, it will be interpretted as a
    // function, when used in constructs such as REDUCE or MAP, args acts
    // as placeholders for the values to test/transform.
    // * Params, on the other hand, denotes user input when calling RPCs,
    // for example, a user might provide an amount to transfer, or an address
    // to transfer to, those will be represented via parameters
    ARG = 7;
    PARAM = 8;
  }
  Type t = 1;
  oneof fields {
    bool b = 2;
    uint64 u = 3;
    bytes raw = 4;
    CellField cell_field = 5;
    ScriptField script_field = 6;
    Op op = 7;
  }
}

message Value {
  enum Type {
    PRIMITIVE = 0;
    LIST = 1;
    APPLY = 2;
    REDUCE = 3;
  }
  Type t = 1;
  Primitive p = 2;
  List l = 3;
  repeated Value children = 4;
}

message List {
  enum Type {
    EMPTY = 0;
    CONS = 1;
    QUERY_CELLS = 2;
    MAP = 3;
    FILTER = 4;
    SLICE = 5;
    CONCAT = 6;
    // TODO: ZIP
  }
  Type t = 1;
  repeated Value values = 2;
  repeated List children = 3;
}
