syntax = "proto3";

package generic;

option go_package = "github.com/xxuejie/animagus/pkg/generic";

import "ast.proto";

message GenericParams {
  string name = 1;
  repeated ast.Value params = 2;
}

service GenericService {
  rpc Call(GenericParams) returns (ast.Value) {}
  rpc Stream(GenericParams) returns (stream ast.Value) {}
}
